# language-of-love

./: .gitignore  README-Exercise.md  README.md  pytest.ini  requirements.txt
input/: thelovegeometry.input
logformatters/: setup.cfg
logformatters/logformatters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logformatters/src/logformatters/: logformatters.py
notebooks/: client_inside_a_notebook-exercise_3.ipynb  client_inside_a_notebook.ipynb
tests/: test_parser.py  test_parser_executor.py
thelovegeometry/: __init__.py  __main__.py  love_story_language_parser_template.py  love_story_semantic_validator.py  parser_executor.py
thelovegeometry/utils/: cli.py  storage_operator.py
thelovegeometry_service/: __init__.py  client.py  run.py  utils.py
