[metadata]
name = logformatters
version = 2021.9.0
author = Hunor Portik
author_email = hunor@portik.dev
description = Logging formatters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject #CHANGEME
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues #CHANGEME
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
;scripts =
;    logformatters/logformatters.py
python_requires = >=3.6
install_requires =
    cython
    tzlocal
    tzdata
    pytz
    pyplugs

[build_exe]
excludes = ["setuptools"]

[options.packages.find]
where = src
;
[options.entry_points]
console_scripts =
    main = logformatters:logformatters